[gd_scene load_steps=3 format=3 uid="uid://sfnjabegbmsu"]

[ext_resource type="Script" path="res://menus/high_scores_table.gd" id="1_yo7es"]
[ext_resource type="Theme" uid="uid://ckmqat7sg1jdb" path="res://themes/default_theme.tres" id="2_tkqu1"]

[node name="HighScoresTable" type="Node"]
script = ExtResource("1_yo7es")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.12549, 0.12549, 0.12549, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 640.0
offset_bottom = 480.0

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 80

[node name="TitleLabel" type="Label" parent="MarginContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_tkqu1")
theme_override_font_sizes/font_size = 32
text = "HIGH SCORES"

[node name="ScoresContainer" type="VBoxContainer" parent="."]
offset_left = 172.0
offset_top = 194.0
offset_right = 412.0
offset_bottom = 330.0

[node name="FirstPlaceLabel" type="Label" parent="ScoresContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tkqu1")
text = "??????????"

[node name="SecondPlaceLabel" type="Label" parent="ScoresContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tkqu1")
text = "??????????"

[node name="ThirdPlaceLabel" type="Label" parent="ScoresContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tkqu1")
text = "??????????"

[node name="BackButton" type="Button" parent="."]
offset_left = 210.0
offset_top = 400.0
offset_right = 450.0
offset_bottom = 431.0
theme = ExtResource("2_tkqu1")
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
